--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,7 +1,13 @@
 <h1>Songs#index</h1>
 <p>Find me in app/views/songs/index.html.erb</p>
-<ul>
-<% @recordings[:contents].each do |recording| %>
-  <li> <%= recording.key %> </li>
+
+<% @folders.each do |folder| %>
+  <p> <%= folder %> </p>
+  <ul>
+  <% @recordings.each do |recording| %>
+    <% if recording[:folder] == folder %>
+      <li> <%= recording[:name] %> </li>
+    <% end %>
+  <% end %>
+  </ul>
 <% end %>
-</ul>
